--- a/css/map.css
+++ b/css/map.css
@@ -18,6 +18,13 @@ h1 {
     color: white;
 }
 
+p {
+    text-align: center;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+}
+
 img {
     width: 100%;
     margin: 4px 0;
