--- a/css/map.css
+++ b/css/map.css
@@ -18,7 +18,7 @@ h1 {
     color: white;
 }
 
-p {
+p.credit {
     text-align: center;
     font-size: 16px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
